--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "agenda-react-backend",
+  "name": "json-server-expense",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Deploy JSON Server Expenses",
+  "main": "api/server.js",
   "scripts": {
-    "start": "json-server --watch db.json --port 3001"
+    "start": "node api/server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "json-server": "^0.16.3"
+    "json-server": "^0.17.4"
   }
 }
