--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,13 @@
 {
   "name": "json-server-expense",
   "version": "1.0.0",
-  "description": "Deploy JSON Server Expenses",
+  "description": "Deploy JSON Server to Vercel",
   "main": "api/server.js",
   "scripts": {
     "start": "node api/server.js"
   },
   "dependencies": {
     "json-server": "^0.17.4"
-  }
+  },
+  "type": "module"
 }
